# chess

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
encrustant/: Cargo.toml
encrustant/benches/: evaluation.rs  make_unmake_move.rs  perft.rs
encrustant/fuzz/: Cargo.toml
encrustant/fuzz/fuzz_targets/: fen_parsing.rs
encrustant/src/: lib.rs  main.rs  timer.rs
encrustant/src/board/: bit_board.rs  fen.rs  game_state.rs  mod.rs  square.rs
encrustant/src/evaluation/: eval_data.rs  mod.rs
encrustant/src/move_generator/: maker.rs  mod.rs  move_data.rs  pawn_move_generator.rs  precomputed.rs  slider_keys.rs  slider_lookup.rs
encrustant/src/perft/: mod.rs
encrustant/src/search/: encoded_move.rs  mod.rs  move_ordering.rs  pv.rs  repetition_table.rs  search_params.rs  time_manager.rs  transposition.rs  zobrist.rs
encrustant/src/uci/: go_params.rs  mod.rs  move_encoding.rs  search_controller.rs
engine/: Cargo.toml  README.md
engine/benches/: evaluation.rs  make_unmake_move.rs  perft.rs
engine/fuzz/: Cargo.toml
engine/fuzz/fuzz_targets/: fen_parsing.rs
engine/src/: lib.rs  main.rs  timer.rs
engine/src/board/: bit_board.rs  fen.rs  game_state.rs  mod.rs  piece.rs  square.rs  zobrist.rs
engine/src/evaluation/: eval_data.rs  mod.rs
engine/src/move_generator/: maker.rs  mod.rs  move_data.rs  pawn_move_generator.rs  precomputed.rs  slider_keys.rs  slider_lookup.rs
engine/src/perft/: mod.rs
engine/src/search/: encoded_move.rs  eval.rs  eval_data.rs  mod.rs  move_ordering.rs  pv.rs  repetition_table.rs  search_params.rs  time_manager.rs  transposition.rs  zobrist.rs
engine/src/uci/: go_params.rs  mod.rs  search_controller.rs
engine_pgo/: Cargo.toml
engine_pgo/src/: main.rs
magic/: Cargo.toml
magic/src/: main.rs
src/: bitboard.rs  board.rs  lib.rs  main.rs  square.rs
src/board/: bit_board.rs  fen.rs  game_state.rs  mod.rs  piece.rs  square.rs  zobrist.rs
src/engine/: encoded_move.rs  eval.rs  eval_data.rs  mod.rs  move_ordering.rs  piece_square_table.rs  transposition.rs
src/move_generator/: maker.rs  mod.rs  move_data.rs  precomputed.rs  slider_keys.rs  slider_lookup.rs
src/perft/: mod.rs
src/uci/: mod.rs
tuner/: Cargo.toml
tuner/src/: main.rs
zobrist/: Cargo.toml
zobrist/src/: main.rs
