[package]
name = "magic"
version = "0.1.0"
description = "Finds magic bit boards for sliding move lookup"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
encrustant = { path = "../encrustant" }
rand_chacha = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
