[package]
name = "tuner"
version = "0.1.0"
description = "Tunes engine parameters"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
rayon = "1.10.0"

[profile.release]
lto = true
codegen-units = 1