[package]
name = "zobrist"
version = "0.1.0"
description = "Generates random 64 bit numbers used for zobrist hashing"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
rand_chacha = "0.3.1"
